--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tod-to-do-list</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/mobile.css">
-
-    <link rel="icon" type="x-icon" href="images/favicon.png">
-</head>
-<body>
-  <div class="container">
-
-      <div class="toDoContainer">
-        <h1 class="textToDoContainer">To-Do-List</h1>
-
-            <div class="inputContainer">
-                <input  type="text" placeholder="Enter to-do text:">
-                <button class="mainButton">Add Task</button>
-            </div>
-            <div class="toDoList">
-                <ul></ul>
-            </div>
-      </div>
-    </div>
-
-    <script src="js/main.js"></script>
-    <script src="js/test.js"></script>
-</body> 
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TodList</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
